import initStoryshots from "@storybook/addon-storyshots";
import "raf/polyfill";

initStoryshots({
	storyKindRegex: /Binded Forms/
});
